--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "liveServer": "live-server public/",
     "buildWatch": "webpack --watch",
+    "build:prod": "webpack -p --env mYproduction",
     "build-babel": "babel src/Section5/counter-with-localStorage.js --out-file=public/scripts/app.js --presets=env,react --watch",
     "devServer": "webpack-dev-server",
     "test": "jest --config=jest.config.json",
@@ -24,6 +25,7 @@
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
     "enzyme-to-json": "3.0.1",
+    "extract-text-webpack-plugin": "3.0.0",
     "jest": "20.0.4",
     "live-server": "^1.2.1",
     "moment": "2.18.1",
