--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "build-babel": "babel src/Section5/counter-with-localStorage.js --out-file=public/scripts/app.js --presets=env,react --watch",
     "devServer": "webpack-dev-server",
     "test": "jest --config=jest.config.json",
-    "testWatch": "jest --watch"
+    "testWatch": "jest --watch",
+    "comment": "heroku is looking for start script to run. heroku-prebuild: heroku runs it before installing dependencies, heroku-postbuild: after  ",
+    "start": "node server/server.js",
+    "heroku-postbuild" : "yarn run build:prod"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
@@ -25,6 +28,7 @@
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
     "enzyme-to-json": "3.0.1",
+    "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
     "jest": "20.0.4",
     "live-server": "^1.2.1",
