--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "moment": "2.18.1",
     "node-sass": "^4.13.1",
     "normalize.css": "7.0.0",
+    "numeral": "2.0.6",
     "raf": "3.3.2",
     "react": "16.0.0",
     "react-addons-shallow-compare": "15.6.0",
@@ -49,9 +50,9 @@
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
     "enzyme-to-json": "3.0.1",
-    "jest": "20.0.4", 
-    "react-test-renderer": "16.0.0",
+    "jest": "20.0.4",
     "live-server": "^1.2.1",
+    "react-test-renderer": "16.0.0",
     "webpack-dev-server": "2.5.1"
   }
 }
