authentication added & firebase rules updated

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:prod": "webpack -p --env mYproduction",
     "build-babel": "babel src/Section5/counter-with-localStorage.js --out-file=public/scripts/app.js --presets=env,react --watch",
     "devServer": "webpack-dev-server",
-    "test": "cross-env NODE_ENV=test jest --config=jest.config.json",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.json --watch",
     "testWatch": "jest --watch",
     "comment": "node-sass is 4.5.3 but not working heroku is looking for start script to run. heroku-prebuild: heroku runs it before installing dependencies, heroku-postbuild: after  ",
     "start": "node server/server.js",
@@ -28,6 +28,7 @@
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
     "firebase": "^7.12.0",
+    "history": "^4.10.1",
     "moment": "2.18.1",
     "node-sass": "^4.13.1",
     "normalize.css": "7.0.0",
